Check for orphan pages (#951)
Close #388 

I ended up not using `zxMain` and set a few different options for
choosing which api docs to look through (similar to
`checkPagesRender.ts`). @Eric-Arellano Let me know if there's anything
that needs fixed or should be refactored!

---------

Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/.github/workflows/api-checks.yml
+++ b/.github/workflows/api-checks.yml
@@ -42,3 +42,9 @@ jobs:
           --dev-apis
           --historical-apis
           --skip-broken-historical
+      - name: Check for orphan pages
+        run: >
+          npm run check:orphan-pages --
+          --current-apis
+          --dev-apis
+          --historical-apis
