--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,8 @@ jobs:
         run: npm run check:spelling
       - name: Internal link checker
         run: npm run check:internal-links
+      - name: Check orphaned pages
+        run: npm run check:orphan-pages
       - name: Formatting
         run: npm run check:fmt
       - name: Typecheck
