--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "check:external-links": "node -r esbuild-register scripts/commands/checkExternalLinks.ts",
     "check:pages-render": "node -r esbuild-register scripts/commands/checkPagesRender.ts",
     "check:orphan-pages": "node -r esbuild-register scripts/commands/checkOrphanPages.ts",
+    "check:stale-images": "node -r esbuild-register scripts/commands/checkStaleImages.ts",
     "fmt": "prettier --write .",
     "test": "jest",
     "typecheck": "tsc",
