--- a/.github/workflows/code-engine-preview.yml
+++ b/.github/workflows/code-engine-preview.yml
@@ -16,7 +16,7 @@ on:
   workflow_call:
     inputs:
       env_name:
-        default: 'Preview'
+        default: "Preview"
         required: true
         type: string
 
