--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -25,6 +25,6 @@ on:
 jobs:
   deploy:
     if: github.repository_owner == 'Qiskit'
-    uses: ./github/workflows/code-engine-preview.yml
+    uses: ./.github/workflows/code-engine-preview.yml
     with:
       env_name: Staging
