--- a/.github/workflows/preview-docs.yml
+++ b/.github/workflows/preview-docs.yml
@@ -30,7 +30,7 @@ jobs:
     if: |
       (github.event.action == 'opened' || github.event.action == 'reopened' || github.event.action == 'synchronize') &&
       github.event.pull_request.head.repo.full_name == github.repository
-    uses: ./github/workflows/code-engine-preview.yml
+    uses: ./.github/workflows/code-engine-preview.yml
     with:
       env_name: Preview
 
