--- a/.github/workflows/preview-docs.yml
+++ b/.github/workflows/preview-docs.yml
@@ -33,6 +33,9 @@ jobs:
     uses: ./.github/workflows/code-engine-preview.yml
     with:
       env_name: Preview
+    secrets:
+      ibmcloud_account: ${{ secrets.IBMCLOUD_ACCOUNT }}
+      ibmcloud_api_key: ${{ secrets.IBMCLOUD_API_KEY }}
 
   teardown:
     if: |
