--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -28,3 +28,6 @@ jobs:
     uses: ./.github/workflows/code-engine-preview.yml
     with:
       env_name: Staging
+    secrets:
+      ibmcloud_account: ${{ secrets.IBMCLOUD_ACCOUNT }}
+      ibmcloud_api_key: ${{ secrets.IBMCLOUD_API_KEY }}
