--- a/.github/workflows/notebook-weekly-test.yml
+++ b/.github/workflows/notebook-weekly-test.yml
@@ -57,3 +57,26 @@ jobs:
       - name: Execute notebooks
         run:
           tox -- --only-submit-jobs
+
+  make_issue:
+    name: Make issue on failure
+    needs: [execute]
+    if: ${{ failure() && github.event_name == 'schedule' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Post issue
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const message = `Today's scheduled test for notebooks that submit jobs failed.
+            Please [check the logs](https://github.com/Qiskit/documentation/actions/runs/${{ github.run_id }}/).
+            > [!NOTE]
+            > This issue was created by a GitHub action.
+            `
+            github.rest.issues.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: "Weekly notebook test failed",
+              body: message,
+              assignees: ["frankharkins", "javabster",]
+            })
