--- a/.github/workflows/notebook-weekly-test.yml
+++ b/.github/workflows/notebook-weekly-test.yml
@@ -15,6 +15,7 @@ on:
   schedule:
     - cron: '0 0 * * 1' # At 00:00 on Monday
   workflow_dispatch:
+  pull_request:
 jobs:
   execute:
     name: Execute notebooks
