--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -42,6 +42,7 @@ jobs:
           # Add your notebook to this list if it needs latex or graphviz to run
           files: |
             docs/build/circuit-visualization.ipynb
+            docs/transpile/representing_quantum_computers.ipynb
             docs/transpile/transpiler-stages.ipynb
 
       - name: Install Linux dependencies
