--- a/.github/workflows/notebook-weekly-test.yml
+++ b/.github/workflows/notebook-weekly-test.yml
@@ -67,7 +67,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const message = `Today's scheduled test for notebooks that submit jobs failed.
+            const message = `Today's scheduled test of notebooks that submit jobs failed.
             Please [check the logs](https://github.com/Qiskit/documentation/actions/runs/${{ github.run_id }}/).
             > [!NOTE]
             > This issue was created by a GitHub action.
@@ -77,5 +77,5 @@ jobs:
               repo: context.repo.repo,
               title: "Weekly notebook test failed",
               body: message,
-              assignees: ["frankharkins", "javabster",]
+              assignees: ["frankharkins", "javabster", "kevinsung",]
             })
