--- a/.github/workflows/reusable/setup-notebook-testing/action.yml
+++ b/.github/workflows/reusable/setup-notebook-testing/action.yml
@@ -15,42 +15,41 @@ description: Set up Python, tox, and IBM Quantum account
 inputs:
   install-linux-deps:
     description: Whether to install extra dependencies
-    default: 'false'
+    default: "false"
   ibm-quantum-token:
     required: true
 runs:
   using: "composite"
   steps:
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-          cache: "pip"
+    - uses: actions/setup-python@v4
+      with:
+        python-version: "3.11"
+        cache: "pip"
 
-      - name: Install Python packages
-        shell: bash
-        run: pip install tox qiskit-ibm-runtime
+    - name: Install Python packages
+      shell: bash
+      run: pip install tox qiskit-ibm-runtime
 
-      - name: Cache tox environment
-        uses: actions/cache@v3
-        with:
-          path: ".tox"
-          key: ${{ hashFiles('scripts/nb-tester/requirements.txt') }}
+    - name: Cache tox environment
+      uses: actions/cache@v3
+      with:
+        path: ".tox"
+        key: ${{ hashFiles('scripts/nb-tester/requirements.txt') }}
 
-      - name: Save IBM Quantum account
-        shell: python
-        run: |
-          from qiskit_ibm_runtime import QiskitRuntimeService
-          QiskitRuntimeService.save_account(
-              channel="ibm_quantum",
-              instance="ibm-q/open/main",
-              token="${{ inputs.ibm-quantum-token }}",
-              set_as_default=True
-          )
+    - name: Save IBM Quantum account
+      shell: python
+      run: |
+        from qiskit_ibm_runtime import QiskitRuntimeService
+        QiskitRuntimeService.save_account(
+            channel="ibm_quantum",
+            instance="ibm-q/open/main",
+            token="${{ inputs.ibm-quantum-token }}",
+            set_as_default=True
+        )
 
-      - name: Install Linux dependencies
-        if: ${{ inputs.install-linux-deps == 'true' }}
-        shell: bash
-        run: |
-          sudo apt-get update
-          sudo apt-get install texlive-pictures texlive-latex-extra poppler-utils graphviz
-
+    - name: Install Linux dependencies
+      if: ${{ inputs.install-linux-deps == 'true' }}
+      shell: bash
+      run: |
+        sudo apt-get update
+        sudo apt-get install texlive-pictures texlive-latex-extra poppler-utils graphviz
