--- a/scripts/nb-tester/requirements.txt
+++ b/scripts/nb-tester/requirements.txt
@@ -3,6 +3,7 @@
 nbconvert~=7.16.0
 nbformat~=5.9.2
 ipykernel~=6.29.2
+mthree==2.6.3
 qiskit[all]~=1.0
 qiskit-aer~=0.13.1
 qiskit-ibm-runtime~=0.22.0
