--- a/.github/workflows/code-engine-preview.yml
+++ b/.github/workflows/code-engine-preview.yml
@@ -99,7 +99,7 @@ jobs:
             --port 3000 \
             --cpu 0.5 \
             --memory 1G \
-            --min 1
+            --min 1 \
             --max 2
           echo "preview_url=$(\
             ibmcloud ce app get --name "${{ env.APP_NAME }}" --output url
