Upgrade to new staging Docker image (#990)
Closes https://github.com/Qiskit/documentation/issues/74.

We were finally able to get a Docker image working with Code Engine.
Turns out the problem was upgrading from Next.js 13.4 to 13.5 because
Code Engine does not play nicely with 13.4.13 or newer.

The Docker image was so slow because we were under-allocating resources.
We double the resources. It's still somewhat slow, but less laggy than
before. The next step would be to double again, which costs more money,
so I was thinking to start with this for now?

---------

Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>

--- a/.github/workflows/code-engine-preview.yml
+++ b/.github/workflows/code-engine-preview.yml
@@ -97,9 +97,10 @@ jobs:
             --image "${{ env.DOCKER_IMAGE_TAG }}" \
             --registry-secret "ibm-container-registry" \
             --port 3000 \
-            --cpu 0.25 \
-            --memory 0.5G \
-            --min 1
+            --cpu 0.5 \
+            --memory 1G \
+            --min 1 \
+            --max 2
           echo "preview_url=$(\
             ibmcloud ce app get --name "${{ env.APP_NAME }}" --output url
           )" >> $GITHUB_OUTPUT
