Add graphviz support to notebook in CI

--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -45,6 +45,7 @@ jobs:
             docs/transpile/common-parameters.ipynb
             docs/transpile/representing_quantum_computers.ipynb
             docs/transpile/transpiler-stages.ipynb
+            docs/transpile/custom-backend.ipynb
 
       - name: Install Linux dependencies
         if: steps.linux-changed-files.outputs.any_changed == 'true'
