--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -25,9 +25,10 @@ on:
 jobs:
   deploy:
     if: github.repository_owner == 'Qiskit'
-    uses: ./.github/workflows/code-engine-preview.yml
-    with:
-      env_name: Staging
-    secrets:
-      ibmcloud_account: ${{ secrets.IBMCLOUD_ACCOUNT }}
-      ibmcloud_api_key: ${{ secrets.IBMCLOUD_API_KEY }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: ./.github/actions/deploy-code-engine
+        with:
+          env_name: Preview
+          ibmcloud_account: ${{ secrets.IBMCLOUD_ACCOUNT }}
+          ibmcloud_api_key: ${{ secrets.IBMCLOUD_API_KEY }}
