--- a/.github/actions/deploy-code-engine/action.yml
+++ b/.github/actions/deploy-code-engine/action.yml
@@ -51,6 +51,7 @@ runs:
         cache-to: type=inline
     - name: Determine Code Engine app status
       id: ce_command_choice
+      shell: bash
       run: |
         if ibmcloud ce app list -q | grep "${{ env.APP_NAME }}" ; then
           echo "command=update" >> $GITHUB_OUTPUT
@@ -59,6 +60,7 @@ runs:
         fi
     - name: Create a new preview application in Code Engine
       id: ce_app_creation
+      shell: bash
       run: |
         ibmcloud ce app ${{ steps.ce_command_choice.outputs.command }} \
           --name "${{ env.APP_NAME }}" \
