--- a/.github/actions/set-up-ibm-cloud/action.yml
+++ b/.github/actions/set-up-ibm-cloud/action.yml
@@ -24,6 +24,7 @@ runs:
   using: "composite"
   steps:
     - name: Set PREVIEW_TAG
+      shell: bash
       run: |
         if "${{ inputs.env_name == 'Preview' }}" ; then
           echo "PREVIEW_TAG=pr-${{ github.event.pull_request.number }}" >> $GITHUB_ENV
@@ -31,10 +32,12 @@ runs:
           echo "PREVIEW_TAG=`node -p "'${{ inputs.env_name }}'.toLowerCase()"`" >> $GITHUB_ENV
         fi
     - name: Set APP_NAME and DOCKER_IMAGE_TAG
+      shell: bash
       run: |
         echo "APP_NAME=qiskit-docs-preview-${{ env.PREVIEW_TAG }}" >> $GITHUB_ENV
         echo "DOCKER_IMAGE_TAG=icr.io/community-digital/qiskit-docs-preview:${{ env.PREVIEW_TAG }}" >> $GITHUB_ENV
     - name: Setup IBM Cloud CLI
+      shell: bash
       run: |
         curl -fsSL https://clis.cloud.ibm.com/install/linux | sh
         ibmcloud --version
@@ -42,9 +45,11 @@ runs:
         ibmcloud plugin install -f code-engine
         ibmcloud plugin install -f container-registry
     - name: Authenticate with IBM Cloud CLI
+      shell: bash
       run: |
         ibmcloud login -g "Quantum Community" -r "us-south" -c "${{ inputs.ibmcloud_account }}" --apikey "${{ inputs.ibmcloud_api_key }}"
     - name: Remove previous Docker image (if exists)
+      shell: bash
       run: |
         ibmcloud cr region-set global
         if ibmcloud cr image-list | grep "qiskit-docs-preview" | grep "${{ env.PREVIEW_TAG }}" ; then
@@ -53,4 +58,5 @@ runs:
           echo "no image to remove"
         fi
     - name: Select Code Engine project
+      shell: bash
       run: ibmcloud ce project select -n "qiskit-docs-preview"
