Fix bad input name

--- a/.github/actions/set-up-ibm-cloud/action.yml
+++ b/.github/actions/set-up-ibm-cloud/action.yml
@@ -15,7 +15,7 @@ description: Set up IBM Cloud and Code Engine
 inputs:
   env_name:
     required: true
-  ibmcloud_secret:
+  ibmcloud_account:
     required: true
   ibmcloud_api_key:
     required: true
