--- a/.github/actions/deploy-code-engine/action.yml
+++ b/.github/actions/deploy-code-engine/action.yml
@@ -15,7 +15,7 @@ description: Deploy app to Code Engine
 inputs:
   env_name:
     required: true
-  ibmcloud_secret:
+  ibmcloud_account:
     required: true
   ibmcloud_api_key:
     required: true
