--- a/.github/actions/set-up-ibm-cloud/action.yml
+++ b/.github/actions/set-up-ibm-cloud/action.yml
@@ -20,22 +20,30 @@ inputs:
   ibmcloud_api_key:
     required: true
 
+outputs:
+  app_name:
+    value: ${{ steps.deploy_tags.outputs.app_name }}
+  docker_image_tag:
+    value: ${{ steps.deploy_tags.outputs.docker_image_tag }}
+
 runs:
   using: "composite"
   steps:
-    - name: Set PREVIEW_TAG
+    - name: Determine preview tag
       shell: bash
+      id: preview_tag
       run: |
         if "${{ inputs.env_name == 'Preview' }}" ; then
-          echo "PREVIEW_TAG=pr-${{ github.event.pull_request.number }}" >> $GITHUB_ENV
+          echo "result=pr-${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
         else
-          echo "PREVIEW_TAG=`node -p "'${{ inputs.env_name }}'.toLowerCase()"`" >> $GITHUB_ENV
+          echo "result=`node -p "'${{ inputs.env_name }}'.toLowerCase()"`" >> $GITHUB_OUTPUT
         fi
-    - name: Set APP_NAME and DOCKER_IMAGE_TAG
+    - name: Deterime app name and Docker image tag
       shell: bash
+      id: deploy_tags
       run: |
-        echo "APP_NAME=qiskit-docs-preview-${{ env.PREVIEW_TAG }}" >> $GITHUB_ENV
-        echo "DOCKER_IMAGE_TAG=icr.io/community-digital/qiskit-docs-preview:${{ env.PREVIEW_TAG }}" >> $GITHUB_ENV
+        echo "app_name=qiskit-docs-preview-${{ steps.preview_tag.outputs.result }}" >> $GITHUB_OUTPUT
+        echo "docker_image_tag=icr.io/community-digital/qiskit-docs-preview:${{ steps.preview_tag.outputs.result }}" >> $GITHUB_OUTPUT
     - name: Setup IBM Cloud CLI
       shell: bash
       run: |
@@ -52,8 +60,8 @@ runs:
       shell: bash
       run: |
         ibmcloud cr region-set global
-        if ibmcloud cr image-list | grep "qiskit-docs-preview" | grep "${{ env.PREVIEW_TAG }}" ; then
-          ibmcloud cr image-rm "${{ env.DOCKER_IMAGE_TAG }}"
+        if ibmcloud cr image-list | grep "qiskit-docs-preview" | grep "${{ steps.preview_tag.outputs.result }}" ; then
+          ibmcloud cr image-rm "${{ steps.deploy_tags.outputs.docker_image_tag }}"
         else
           echo "no image to remove"
         fi
