--- a/.github/workflows/preview-docs.yml
+++ b/.github/workflows/preview-docs.yml
@@ -47,6 +47,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/set-up-ibm-cloud
+        id: set-up-cloud
         with:
           env_name: Preview
           ibmcloud_account: ${{ secrets.IBMCLOUD_ACCOUNT }}
@@ -55,7 +56,7 @@ jobs:
         run: |
           ibmcloud ce project select -n qiskit-docs-preview
           ibmcloud ce application delete \
-            --name "${{ env.APP_NAME }}" \
+            --name "${{ steps.set-up-cloud.outputs.app_name }}" \
             --wait \
             --ignore-not-found \
             --force
