Fix relative path

--- a/.github/actions/deploy-code-engine/action.yml
+++ b/.github/actions/deploy-code-engine/action.yml
@@ -23,7 +23,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: ./github/actions/set-up-ibm-cloud
+    - uses: ./.github/actions/set-up-ibm-cloud
       id: set-up-cloud
       with:
         env_name: ${{ inputs.env_name }}
