Clean up issues

--- a/.github/actions/set-up-ibm-cloud/action.yml
+++ b/.github/actions/set-up-ibm-cloud/action.yml
@@ -38,7 +38,7 @@ runs:
         else
           echo "result=`node -p "'${{ inputs.env_name }}'.toLowerCase()"`" >> $GITHUB_OUTPUT
         fi
-    - name: Deterime app name and Docker image tag
+    - name: Determine app name and Docker image tag
       shell: bash
       id: deploy_tags
       run: |
