--- a/.github/workflows/preview-docs.yml
+++ b/.github/workflows/preview-docs.yml
@@ -39,7 +39,7 @@ jobs:
 
   teardown:
     if: |
-      github.event.pull_request.merged == true &&
+      github.event.action == 'closed' &&
       github.event.pull_request.head.repo.full_name == github.repository
     runs-on: ubuntu-latest
     steps:
