--- a/.github/workflows/preview-docs.yml
+++ b/.github/workflows/preview-docs.yml
@@ -30,7 +30,7 @@ jobs:
     if: |
       (github.event.action == 'opened' || github.event.action == 'reopened' || github.event.action == 'synchronize') &&
       github.event.pull_request.head.repo.full_name == github.repository
-    uses: ./.github/workflows/code-engine-preview.yml
+    uses: ./.github/workflows/deploy-code-engine.yml
     with:
       env_name: Preview
     secrets:
@@ -43,33 +43,18 @@ jobs:
       github.event.pull_request.head.repo.full_name == github.repository
     runs-on: ubuntu-latest
     steps:
-      - name: Set PREVIEW_TAG
-        run: echo "PREVIEW_TAG=pr-${{ github.event.pull_request.number }}" >> $GITHUB_ENV
-      - name: Set APP_NAME and DOCKER_IMAGE_TAG
-        run: |
-          echo "APP_NAME=qiskit-docs-preview-${{ env.PREVIEW_TAG }}" >> $GITHUB_ENV
-          echo "DOCKER_IMAGE_TAG=icr.io/community-digital/qiskit-docs-preview:${{ env.PREVIEW_TAG }}" >> $GITHUB_ENV
-      - name: Install IBM Cloud CLI
-        run: |
-          curl -o IBM_Cloud_CLI_2.20.0_amd64.tar.gz -L https://download.clis.cloud.ibm.com/ibm-cloud-cli/2.20.0/IBM_Cloud_CLI_2.20.0_amd64.tar.gz
-          tar xvf IBM_Cloud_CLI_2.20.0_amd64.tar.gz
-          sh Bluemix_CLI/install
-          ibmcloud --version
-          ibmcloud config --check-version=false
-          ibmcloud plugin install -f code-engine
-          ibmcloud plugin install -f container-registry
-      - name: Authenticate with IBM Cloud CLI
-        run: |
-          ibmcloud login -g "Quantum Community" -r "us-south" -c "${{ secrets.ibmcloud_account }}" --apikey "${{ secrets.ibmcloud_api_key }}"
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/set-up-ibm-cloud
+        id: set-up-cloud
+        with:
+          env_name: Preview
+          ibmcloud_account: ${{ secrets.IBMCLOUD_ACCOUNT }}
+          ibmcloud_api_key: ${{ secrets.IBMCLOUD_API_KEY }}
       - name: Remove Code Engine preview application
         run: |
           ibmcloud ce project select -n qiskit-docs-preview
           ibmcloud ce application delete \
-            --name "${{ env.APP_NAME }}" \
+            --name "${{ steps.set-up-cloud.outputs.app_name }}" \
             --wait \
             --ignore-not-found \
             --force
-      - name: Remove Docker image
-        run: |
-          ibmcloud cr region-set global
-          ibmcloud cr image-rm "${{ env.DOCKER_IMAGE_TAG }}"
