Fix PR workflow

--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -29,7 +29,7 @@ jobs:
         id: all-changed-files
         uses: tj-actions/changed-files@af2816c65436325c50621100d67f6e853cd1b0f1
         with:
-          files: docs/**/*.ipynb
+          files: "{tutorials,docs}/**/*.ipynb"
           separator: "\n"
 
       - name: Check for notebooks that require Linux
