--- a/.github/workflows/notebook-test-cron.yml
+++ b/.github/workflows/notebook-test-cron.yml
@@ -29,8 +29,8 @@ jobs:
           instance: "client-enablement/documentation/qiskit-documenta"
 
       - name: Execute notebooks
-        timeout-minutes: 330
-        run: tox -- --write --only-submit-jobs
+        timeout-minutes: 10
+        run: tox -- --write
 
       - name: Detect changed notebooks
         id: changed-notebooks
