Revert "Test workflow"
This reverts commit e107fc6935a340f3e284e0a4f018aa00d789d976.

--- a/.github/workflows/notebook-test-cron.yml
+++ b/.github/workflows/notebook-test-cron.yml
@@ -29,8 +29,8 @@ jobs:
           instance: "client-enablement/documentation/qiskit-documenta"
 
       - name: Execute notebooks
-        timeout-minutes: 10
-        run: tox -- --write
+        timeout-minutes: 330
+        run: tox -- --write --only-submit-jobs
 
       - name: Detect changed notebooks
         id: changed-notebooks
