--- a/.github/workflows/deploy-tutorials.yml
+++ b/.github/workflows/deploy-tutorials.yml
@@ -35,4 +35,4 @@ jobs:
           sync-lessons
         env:
           LEARNING_API_TOKEN: ${{ secrets.LEARNING_API_TOKEN }}
-          LEARNING_API_ENVIRONMENT: ${{ env.LEARNING_API_ENVIRONMENT }}
+          LEARNING_API_ENVIRONMENT: ${{ vars.LEARNING_API_ENVIRONMENT }}
