--- a/.github/workflows/learning-uploader-test.yml
+++ b/.github/workflows/learning-uploader-test.yml
@@ -38,7 +38,7 @@ jobs:
           ./e2e-test.sh
         env:
           LEARNING_API_TOKEN: ${{ secrets.LEARNING_API_TOKEN_STAGING }}
-          LEARNING_API_ENVIRONMENT: ${{ env.LEARNING_API_ENVIRONMENT }}
+          LEARNING_API_ENVIRONMENT: ${{ vars.LEARNING_API_ENVIRONMENT }}
 
   make_issue:
     name: Make issue on failure
