Apply suggestions from code review
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/.github/workflows/deploy-tutorials.yml
+++ b/.github/workflows/deploy-tutorials.yml
@@ -16,7 +16,7 @@ on:
     inputs:
       environment:
         type: environment
-        description: Where to upload the tutorials. Must start with "Learning platform".
+        description: Where to upload the tutorials. Either "Learning platform (staging)" or "Learning platform (production)".
         required: true
 jobs:
   deploy:
