--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,14 @@ env_list = py311
 skipsdist = true
 
 [testenv]
-deps = -r scripts/nb-tester/requirements.txt
+deps =
+  -e scripts/nb-tester
+  -r scripts/nb-tester/requirements.txt
 setenv = PYDEVD_DISABLE_FILE_VALIDATION=1
-commands = python scripts/nb-tester/test-notebook.py {posargs}
+commands = test-docs-notebooks {posargs} --config-path scripts/nb-tester/notebooks.toml
 
-[testenv:lint]
-commands = squeaky --check --no-advice {posargs:docs tutorials}
-
-[testenv:fix]
-commands = squeaky {posargs:docs tutorials}
+[testenv:{lint,fix}]
+deps = squeaky==0.7.0
+commands = 
+  lint: squeaky --check --no-advice {posargs:docs tutorials}
+  fix:  squeaky {posargs:docs tutorials}
