--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -3,7 +3,7 @@ all-notebooks = "[!.]*/**/*.ipynb"
 
 # Always exclude notebooks matching the following patterns
 notebooks-exclude = [
-    "docs/api/**",
+    "scripts/ibm-quantum-learning-uploader/test/template.ipynb",
     "**/.ipynb_checkpoints/**",
 ]
 
