--- a/scripts/nb-tester/pyproject.toml
+++ b/scripts/nb-tester/pyproject.toml
@@ -6,13 +6,14 @@ build-backend = "hatchling.build"
 name = "qiskit-docs-notebook-tester"
 version = "0.0.1"
 description = "Tool for the Qiskit docs team to test their notebooks"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 license = "Apache-2.0"
 dependencies = [
   "nbconvert~=7.16.0",
   "nbformat~=5.9.2",
   "ipykernel~=6.29.2",
   "squeaky==0.7.0",
+  "tomli==2.0.1",
 ]
 
 [[project.authors]]
