Tweaks to get the script working

--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -1,14 +1,14 @@
 # Used to find all notebooks in the repo
-all-notebooks = "[!.]*/**/*.ipynb"
+all_notebooks = "[!.]*/**/*.ipynb"
 
 # Always exclude notebooks matching the following patterns
-notebooks-exclude = [
+notebooks_exclude = [
     "scripts/ibm-quantum-learning-uploader/test/template.ipynb",
     "**/.ipynb_checkpoints/**",
 ]
 
 # The following notebooks submit jobs to IBM Quantum
-notebooks-that-submit-jobs = [
+notebooks_that_submit_jobs = [
     "docs/start/hello-world.ipynb",
     "tutorials/build-repitition-codes/build-repitition-codes.ipynb",
     "tutorials/chsh-inequality/chsh-inequality.ipynb",
