--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -7,9 +7,8 @@ notebooks_exclude = [
     "**/.ipynb_checkpoints/**",
 ]
 
-# The following notebooks submit jobs to IBM Quantum
+# The following notebooks submit jobs that can be mocked with a simulator
 notebooks_that_submit_jobs = [
-    "docs/start/hello-world.ipynb",
     "tutorials/build-repitition-codes/build-repitition-codes.ipynb",
     "tutorials/chsh-inequality/chsh-inequality.ipynb",
     "tutorials/grovers-algorithm/grovers.ipynb",
@@ -17,4 +16,9 @@ notebooks_that_submit_jobs = [
     "tutorials/repeat-until-success/repeat-until-success.ipynb",
     "tutorials/submitting-transpiled-circuits/submitting-transpiled-circuits.ipynb",
     "tutorials/variational-quantum-eigensolver/vqe.ipynb",
+]
+
+# The following notebooks submit jobs that are too big to mock with a simulator
+notebooks_no_mock = [
+    "docs/start/hello-world.ipynb",
 ]
