update config files

--- a/tutorials/learning-api.conf.yaml
+++ b/tutorials/learning-api.conf.yaml
@@ -20,7 +20,7 @@ lessons:
   - path: repeat-until-success
     urlStaging: tutorials/caacbe11-a00f-4bbc-bc8b-953cf1d75b46
     urlProduction: tutorials/5d88dda9-d990-4118-9950-8216528e8c8b
-  - path: build-repitition-codes
+  - path: build-repetition-codes
     urlStaging: tutorials/46fc6326-bc12-4106-b334-7d693be34dd8
     urlProduction: tutorials/7bd832af-5bc3-4382-b837-accb709d5e5c
   - path: explore-composer
