--- a/.github/workflows/notebook-test-cron.yml
+++ b/.github/workflows/notebook-test-cron.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Execute notebooks
         timeout-minutes: 350
-        run: tox -- --write --submit-jobs
+        run: tox -- --write --only-submit-jobs
 
       - name: Detect changed notebooks
         id: changed-notebooks
