add to notebooks_no_mock

--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -21,4 +21,5 @@ notebooks_that_submit_jobs = [
 # The following notebooks submit jobs that are too big to mock with a simulator
 notebooks_no_mock = [
     "docs/start/hello-world.ipynb",
+    "tutorials/error-mitigation-runtime-estimator/error-mitigation-runtime-estimator.ipynb",
 ]
