Add Sanket to reviewers when Serverless page updates

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -189,6 +189,7 @@ notifications:
   "docs/run/quantum-serverless":
     - "@jenglick"
     - "@psschwei"
+    - "@pandasa123"
   "docs/run/processor-types":
     - "`@lerongil`"
     - "@abbycross"
