Mark notebook as job-submitting

--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -12,6 +12,7 @@ notebooks_that_submit_jobs = [
     "tutorials/build-repetition-codes/build-repetition-codes.ipynb",
     "tutorials/chsh-inequality/chsh-inequality.ipynb",
     "tutorials/grovers-algorithm/grovers.ipynb",
+    "tutorials/krylov-subspace/krylov-subspace.ipynb",
     "tutorials/quantum-approximate-optimization-algorithm/qaoa.ipynb",
     "tutorials/repeat-until-success/repeat-until-success.ipynb",
     "tutorials/submitting-transpiled-circuits/submitting-transpiled-circuits.ipynb",
