Skip notebook in tests

--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -5,11 +5,12 @@ all_notebooks = "[!.]*/**/*.ipynb"
 notebooks_exclude = [
     "scripts/ibm-quantum-learning-uploader/test/template.ipynb",
     "**/.ipynb_checkpoints/**",
+    # The following notebooks are broken and need fixing
+    "tutorials/build-repetition-codes/build-repetition-codes.ipynb",
 ]
 
 # The following notebooks submit jobs that can be mocked with a simulator
 notebooks_that_submit_jobs = [
-    "tutorials/build-repetition-codes/build-repetition-codes.ipynb",
     "tutorials/chsh-inequality/chsh-inequality.ipynb",
     "tutorials/grovers-algorithm/grovers.ipynb",
     "tutorials/quantum-approximate-optimization-algorithm/qaoa.ipynb",
