Refactor and remove nbconvert

--- a/scripts/nb-tester/pyproject.toml
+++ b/scripts/nb-tester/pyproject.toml
@@ -9,7 +9,7 @@ description = "Tool for the Qiskit docs team to test their notebooks"
 requires-python = ">=3.9"
 license = "Apache-2.0"
 dependencies = [
-  "nbconvert~=7.16.0",
+  "nbclient~=0.10.0",
   "nbformat~=5.9.2",
   "ipykernel~=6.29.2",
   "squeaky==0.7.0",
