Skip broken notebook

--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -5,6 +5,8 @@ all_notebooks = "[!.]*/**/*.ipynb"
 notebooks_exclude = [
     "scripts/ibm-quantum-learning-uploader/test/template.ipynb",
     "**/.ipynb_checkpoints/**",
+    # The following notebooks are broken and need fixing
+    "tutorials/submitting-transpiled-circuits/submitting-transpiled-circuits.ipynb",
 ]
 
 # The following notebooks submit jobs that can be mocked with a simulator
@@ -14,7 +16,6 @@ notebooks_that_submit_jobs = [
     "tutorials/grovers-algorithm/grovers.ipynb",
     "tutorials/quantum-approximate-optimization-algorithm/qaoa.ipynb",
     "tutorials/repeat-until-success/repeat-until-success.ipynb",
-    "tutorials/submitting-transpiled-circuits/submitting-transpiled-circuits.ipynb",
     "tutorials/variational-quantum-eigensolver/vqe.ipynb",
 ]
 
