--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,4 +3,4 @@ updates:
   - package-ecosystem: "pip"
     directory: "scripts/nb-tester"
     schedule:
-      interval: "weekly"
+      interval: "daily"
