Add qiskit_bot.yaml check

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,8 @@ jobs:
         run: npm run check:metadata
       - name: Spellcheck
         run: npm run check:spelling
+      - name: Check Qiskit bot config
+        run: npm run check:qiskit-bot
       - name: Internal link checker
         run: npm run check:internal-links
       - name: Check orphaned pages
