--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -53,4 +53,5 @@ notebooks_that_submit_jobs = [
 # memory on a reasonable device.
 notebooks_no_mock = [
     "docs/start/hello-world.ipynb",
+    "tutorials/combining-error-mitigation-estimator/combining-error-mitigation-estimator.ipynb",
 ]
