--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -54,4 +54,5 @@ notebooks_that_submit_jobs = [
 notebooks_no_mock = [
     "docs/start/hello-world.ipynb",
     "tutorials/combining-error-mitigation-estimator/combining-error-mitigation-estimator.ipynb",
+    "tutorials/combine-error-mitigation-options-with-the-estimator-primitive/combine-error-mitigation-options-with-the-estimator-primitive.ipynb",
 ]
