--- a/tutorials/learning-api.conf.yaml
+++ b/tutorials/learning-api.conf.yaml
@@ -26,3 +26,6 @@ lessons:
   - path: explore-composer
     urlStaging: tutorials/28f53e87-52ba-4fa7-a1f9-9ad7f548a7e0
     urlProduction: tutorials/967371a7-159d-459a-a7a6-210c55b14766
+  - path: combine-error-mitigation-options-with-the-estimator-primitive
+    urlStaging: tutorials/58d982db-9510-4815-a13c-c81abae1507f
+    urlProduction: tutorials/bfba1c87-8469-4a98-8c06-886a4a382e79
