Revert "Fix notebooks.toml"
This reverts commit 962bb525637d184b15297ae319c77580bc4f167d.

I get the two notebooks confused all the time.

--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -44,6 +44,7 @@ notebooks_that_submit_jobs = [
     "tutorials/chsh-inequality/chsh-inequality.ipynb",
     "tutorials/grovers-algorithm/grovers.ipynb",
     "tutorials/quantum-approximate-optimization-algorithm/qaoa.ipynb",
+    "tutorials/repeat-until-success/repeat-until-success.ipynb",
     "tutorials/variational-quantum-eigensolver/vqe.ipynb",
 ]
 
