--- a/.github/workflows/weekly-checks.yml
+++ b/.github/workflows/weekly-checks.yml
@@ -53,6 +53,8 @@ jobs:
       - name: Install Node.js dependencies
         run: npm ci
       - name: Check external links
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         run: >
           npm run check:external-links --
           'docs/**/*.{md,mdx,ipynb}'
