--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -30,7 +30,7 @@ jobs:
         shell: python
         run: |
           raise SystemExit(
-            "We can't run this test on pull requests form forks."
+            "We can't run this test on pull requests from forks."
             "\n\n"
             "If you have write access to Qiskit/documentation, push to a new "
             "branch there and make your pull request from that branch instead."
