Pull out notebook classification check into a pytest test

--- a/tox.ini
+++ b/tox.ini
@@ -15,3 +15,9 @@ deps = squeaky==0.7.0
 commands = 
   lint: squeaky --check --no-advice {posargs:docs tutorials}
   fix:  squeaky {posargs:docs tutorials}
+
+[testenv:nb-tester]
+deps =
+  -e scripts/nb-tester
+  pytest
+commands = pytest scripts/nb-tester
