--- a/scripts/nb-tester/pyproject.toml
+++ b/scripts/nb-tester/pyproject.toml
@@ -9,6 +9,7 @@ description = "Tool for the Qiskit docs team to test their notebooks"
 requires-python = ">=3.9"
 license = "Apache-2.0"
 dependencies = [
+  "qiskit-ibm-runtime",
   "nbclient~=0.10.0",
   "nbformat~=5.10.4",
   "ipykernel~=6.29.2",
