--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,3 +59,9 @@ jobs:
         run: |
           echo "${{ steps.changed-docs-files.outputs.all_changed_files }}" > changed.txt
           npm run check:pages-render -- --from-file changed.txt
+
+      - name: Setup Python environment
+        uses: ./.github/actions/set-up-notebook-testing
+      - name: nb-tester tests
+        run: tox -e nb-tester
+
