Update qiskit bot

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -31,6 +31,9 @@ notifications:
     - "`@mtreinish`"
     - "`@jakelishman`"
     - "@beckykd"
+  "docs/start/latest-updates":
+    - "@javabster"
+    - "@frankharkins"
   # build
   "docs/build/index":
     - "@javabster"
