--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -40,18 +40,18 @@ notebooks_exclude = [
 
 # The following notebooks submit jobs that can be mocked with a simulator
 notebooks_that_submit_jobs = [
-    "tutorials/build-repetition-codes/build-repetition-codes.ipynb",
     "tutorials/chsh-inequality/chsh-inequality.ipynb",
     "tutorials/grovers-algorithm/grovers.ipynb",
     "tutorials/quantum-approximate-optimization-algorithm/qaoa.ipynb",
     "tutorials/variational-quantum-eigensolver/vqe.ipynb",
 ]
 
-# The following notebooks submit jobs that are too big to mock with a simulator
+# The following notebooks submit jobs that are too big to mock with a simulator (or use functions that aren't supported on sims)
 # A job is "too big" if a cell can't run in under 5 mins, or we run out of
 # memory on a reasonable device.
 notebooks_no_mock = [
     "docs/start/hello-world.ipynb",
     "tutorials/combine-error-mitigation-options-with-the-estimator-primitive/combine-error-mitigation-options-with-the-estimator-primitive.ipynb",
     "tutorials/repeat-until-success/repeat-until-success.ipynb",
+    "tutorials/build-repetition-codes/build-repetition-codes.ipynb",
 ]
