First draft: Can update lessons and add new ones! :tada:

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "zx": "^7.2.3"
   },
   "dependencies": {
+    "@directus/sdk": "^16.0.1",
     "esbuild": "^0.19.11",
     "fast-levenshtein": "^3.0.0",
     "markdown-link-extractor": "^3.1.0",
