--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "typecheck": "tsc",
     "regen-apis": "node -r esbuild-register scripts/commands/regenerateApiDocs.ts",
     "gen-api": "node -r esbuild-register scripts/commands/updateApiDocs.ts",
-    "make-historical": "node -r esbuild-register scripts/commands/convertApiDocsToHistorical.ts"
+    "make-historical": "node -r esbuild-register scripts/commands/convertApiDocsToHistorical.ts",
+    "tutorial:sync": "node -r esbuild-register scripts/tutorial-uploader/main.ts"
   },
   "devDependencies": {
     "@swc/jest": "^0.2.29",
@@ -62,6 +63,7 @@
     "@directus/sdk": "^16.0.1",
     "esbuild": "^0.19.11",
     "fast-levenshtein": "^3.0.0",
+    "js-yaml": "^4.1.0",
     "markdown-link-extractor": "^3.1.0",
     "transform-markdown-links": "^2.1.0"
   }
