`notebook_path` -> `local_path`
Is actually path to folder containing notebook

--- a/tutorials/learning-api.conf.yaml
+++ b/tutorials/learning-api.conf.yaml
@@ -9,7 +9,7 @@
 #   title: The title of the page (top-level headings in the notebook are ignored)
 #   short_description: The description users will see in page previews (max 160 characters)
 #   slug: The last part of the URL; do not change this (see note above)
-#   notebook_path: The path to the tutorial folder, relative to `tutorials/`
+#   local_path: The path to the tutorial folder, relative to `tutorials/`
 #   status: Can be "draft", "published", or "archived". Do not set to
 #           "archived" until appropriate redirects are set up.
 #   category: Can be "Workflow example" or "How-to"
@@ -22,7 +22,7 @@
     demonstrate the violation of the CHSH inequality with the Estimator
     primitive.
   slug: chsh-inequality
-  notebook_path: chsh-inequality
+  local_path: chsh-inequality
   status: published
   category: Workflow example
   reading_time: 20
@@ -32,7 +32,7 @@
   short_description: >
     Demonstrating how to create Grover's algorithm with Qiskit Runtime
   slug: grovers-algorithm
-  notebook_path: grovers-algorithm
+  local_path: grovers-algorithm
   status: published
   category: Workflow example
   reading_time: 15
@@ -44,7 +44,7 @@
     combinatorial optimization problems. This tutorial uses Qiskit Runtime to
     solve a simple max-cut problem.
   slug: quantum-approximate-optimization-algorithm
-  notebook_path: quantum-approximate-optimization-algorithm
+  local_path: quantum-approximate-optimization-algorithm
   status: published
   category: Workflow example
   reading_time: 20
@@ -55,7 +55,7 @@
     In this tutorial, we'll disable automatic transpilation and take you
     through the full process of creating, transpiling, and submitting circuits.
   slug: submit-transpiled-circuits
-  notebook_path: submitting-transpiled-circuits
+  local_path: submitting-transpiled-circuits
   status: published
   category: How-to
   reading_time: 15
@@ -66,7 +66,7 @@
     Variational quantum algorithms are hybrid-algorithms for observing the
     utility of quantum computation on noisy, near-term IBM Quantum systems.
   slug: variational-quantum-eigensolver
-  notebook_path: variational-quantum-eigensolver
+  local_path: variational-quantum-eigensolver
   status: published
   category: Workflow example
   reading_time: 28
@@ -78,7 +78,7 @@
     measurements to produce a circuit that repeats until a successful syndrome
     measurement.
   slug: repeat-until-success
-  notebook_path: repeat-until-success
+  local_path: repeat-until-success
   status: published
   category: How-to
   reading_time: 25
@@ -89,7 +89,7 @@
     This tutorial demonstrates how to build basic repetition codes using IBM
     dynamic circuits, an example of basic quantum error correction (QEC).
   slug: build-repetition-codes
-  notebook_path: build-repetition-codes
+  local_path: build-repetition-codes
   status: published
   category: How-to
   reading_time: 15
@@ -100,7 +100,7 @@
     Learn how to use IBM Quantum Composer to build quantum circuits and run
     them on IBM Quantum systems and simulators.
   slug: explore-gates-and-circuits-with-the-quantum-composer
-  notebook_path: explore-composer
+  local_path: explore-composer
   status: published
   category: How-to
   reading_time: 95
@@ -111,7 +111,7 @@
     Combine error mitigation options for utility-scale experiments using 100Q+
     IBM Quantum systems and the Qiskit Runtime Estimator primitive.
   slug: combine-error-mitigation-options-with-the-estimator-primitive
-  notebook_path: combine-error-mitigation-options-with-the-estimator-primitive
+  local_path: combine-error-mitigation-options-with-the-estimator-primitive
   status: published
   category: Workflow example
   reading_time: 180
