Validate `learning-api.conf.yaml`

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "regen-apis": "node -r esbuild-register scripts/commands/regenerateApiDocs.ts",
     "gen-api": "node -r esbuild-register scripts/commands/updateApiDocs.ts",
     "make-historical": "node -r esbuild-register scripts/commands/convertApiDocsToHistorical.ts",
-    "tutorial:sync": "node -r esbuild-register scripts/tutorial-uploader/main.ts"
+    "tutorial:sync": "node -r esbuild-register scripts/tutorial-uploader/sync.ts",
+    "tutorial:validate": "node -r esbuild-register scripts/tutorial-uploader/validate.ts"
   },
   "devDependencies": {
     "@swc/jest": "^0.2.29",
